--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="Login_to_continue">Login to continue</string>
     <string name="sing_up">Sing Up</string>
     <string name="select_user">Select User</string>
+    <string name="type_a_message">Type a message</string>
 </resources>
